--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,40 @@ li {
 }
 
 
+
+.ce-my-message-bubble {
+  background-color: black !important;
+  
+}
+
+.ce-chat-title-text {
+  color: black !important;
+}
+
+.ce-chat-subtitle-text {
+  color: black !important;
+  font-weight: 600;
+}
+
+#ce-send-message-button {
+  position: relative !important;
+  bottom: 2px !important;
+  left: 1px !important;
+  background-color: #fed330 !important;
+}
+
+.ce-my-message-timestamp {
+  color: black !important;
+}
+
+.transition-3 {
+  transition: all 0.33s ease;
+  -webkit-transition: all 0.33s ease;
+  -moz-transition: all 0.33s ease;
+}
+
+.transition-5 {
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+}
